   during potentially long-running operations (loading, validating, writing)
-- New validation algorithms for cycle-detection and hierarchy checking vastly
   decrease startup time on large databases.
-- SF bug #1552816: fixed an issue that could cause tracebacks in emergency mode
   to produce "Unknown Var type" errors
**** Changes relevant to programmers / wizards:
-- SF bug #227620: add_verb() now returns (positive integer) verb index
-- bf_crypt() now passes salts longer than 2 characters to the underlying C
   function.  This works fine for traditional DES crypts and supports modern
   modular crypts like FreeBSD's.  See the Programmers Manual for more details.
-- bf_queued_tasks() entries include a 10th element (size of the task in bytes)
-- bf_open_network_connection() accepts an optional third argument that
   associates a specific listener object with the new connection.  This
   simplifies a lot of outbound connection management.
-- network input is suspended on new connections until after the initial
   #0:do_login_command call returns.  Thus do_login_command may now reliably
   set binary mode without losing data.
-- connection_option()/connection_options()/set_connection_option() now
   recognize the following new options:
   (*) "intrinsic-commands"
       which determines which (if any) of the commands
          .program
          PREFIX
          SUFFIX
          OUTPUTPREFIX
          OUTPUTSUFFIX
       will be recognized on that connection.  Option value is a list 
       of strings, but set_connection_option() also accepts any numeric
       value, in which case all 5 intrinsic commands are enabled/disabled
       according to the value being true/false.
   (*) "disable-oob"
       which, if set true, disables all out-of-band command processing 
       on subsequent input lines, i.e., the server behaves for that 
       connection as if OUT_OF_BAND_PREFIX had never been #defined.
       Out-of-band quoting (see below) is likewise disabled.